releases-istio/nordmart-dev-apps-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: nordmart-dev-apps
spec:
  host: "*.nordmart-dev-apps.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
